testsuite/tests/typecheck/no_skolem_info/KcConDeclSkolem.stderr

KcConDeclSkolem.hs:9:15: error:
    • Expected kind ‘k’, but ‘a’ has kind ‘k -> k0’
    • In the first argument of ‘Proxy’, namely ‘(a :: k)’
      In the type ‘Proxy (a :: k)’
      In the definition of data constructor ‘D’
